--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 Assignments/ElizabethClawson/2.0/.DS_Store
 Assignments/ElizabethClawson/.DS_Store
 Assignments/ElizabethClawson/2.0/.DS_Store
+.DS_Store
