--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ Assignments/ElizabethClawson/.DS_Store
 Assignments/ElizabethClawson/2.0/.DS_Store
 .DS_Store
 Assignments/ElizabethClawson/.DS_Store
+.DS_Store
+Assignments/ElizabethClawson/.DS_Store
+Assignments/ElizabethClawson/2.0/.DS_Store
+Assignments/ElizabethClawson/2.1/.DS_Store
+Assignments/ElizabethClawson/2.2/.DS_Store
