--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ Assignments/ElizabethClawson/.DS_Store
 Assignments/ElizabethClawson/2.0/.DS_Store
 Assignments/ElizabethClawson/2.1/.DS_Store
 Assignments/ElizabethClawson/2.2/.DS_Store
+Assignments/RobertChavez/RANDOMIZER RC copy/assets/random-4.jpg
+Assignments/RobertChavez/RANDOMIZER RC copy/assets/random-3.jpg
+*.jpg
