sorry fi im not supposed to do this but I forgettt

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Assignments/ElizabethClawson/2.2/.DS_Store
 Assignments/RobertChavez/RANDOMIZER RC copy/assets/random-4.jpg
 Assignments/RobertChavez/RANDOMIZER RC copy/assets/random-3.jpg
 *.jpg
+Assignments/AlexGarcia/.DS_Store
+Assignments/AlexGarcia/.DS_Store
